--- a/shop/templates/shop/all_category.html
+++ b/shop/templates/shop/all_category.html
@@ -60,8 +60,8 @@
                                                                          height="210"></a>
 
                             <div class="mask rgba-white-slight"><h4 class="text-center">
-                                {{c.name}}</h4></a></div>
-                            </a>
+                                {{c.name}}</h4></div>
+
                         </div>
 
                         <div class="card-body text-center">
