--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -12,6 +12,7 @@
     --green-light: #40AB5E;
     --stroke: #E5E2E1;
     --background: #F5F2F1;
+    --white: #fff;
 
     color-scheme: light;
     color: var(--black);
@@ -52,7 +53,9 @@ body {
 }
 
 p {
-    text-align: justify;
+    /*text-align: justify;*/
+    margin-block-start: 0;
+    margin-block-end: 0;
 }
 
 h1, h2, h3, h4 {
@@ -111,6 +114,7 @@ h4 {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    color: var(--black-55)
 }
 
 .small-text-2 {
@@ -118,9 +122,10 @@ h4 {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    color: var(--black-55)
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 1280px) {
     body {
         font-size: 1.125rem;
         font-style: normal;
@@ -175,7 +180,7 @@ h4 {
 
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 1000px) {
     body {
         font-size: 1rem;
         font-style: normal;
@@ -228,7 +233,7 @@ h4 {
     }
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 640px) {
     body {
         font-size: 0.875rem;
         font-style: normal;
