--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -109,6 +109,40 @@ h4 {
     line-height: normal;
 }
 
+
+.button.notification {
+    border: 2px var(--green-light, #40AB5E) solid;
+    color: var(--green-light);
+    display: flex;
+    padding: 0.75rem 1rem;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+    border-radius: 0.5rem;
+    font-size: 0.875rem;
+    margin-top: 0.5rem;
+
+
+    user-select: none;
+    text-decoration: none;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
+.button.notification:hover {
+    /*opacity: 0.5;*/
+    background: var(--green-light, #40AB5E);
+    color: white;
+}
+
+.el-notification {
+    width: 300px !important;
+}
+
+.el-notification .el-notification--success {
+    color: var(--green-light) !important;
+}
+
 .small-text-1 {
     font-size: 1rem;
     font-style: normal;
