--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -10,6 +10,8 @@
     --black-20: #CCC;
     --green-primary: #289646;
     --green-light: #40AB5E;
+    --yellow-primary: #ffae00;
+    --yellow-light: #fbb934;
     --stroke: #E5E2E1;
     --background: #F5F2F1;
     --white: #fff;
