--- a/client/public/style.css
+++ b/client/public/style.css
@@ -10,6 +10,8 @@
     --black-20: #CCC;
     --green-primary: #289646;
     --green-light: #40AB5E;
+    --yellow-primary: #ffae00;
+    --yellow-light: #fbb934;
     --stroke: #E5E2E1;
     --background: #F5F2F1;
     --white: #fff;
@@ -34,6 +36,7 @@
 
 html, body {
     overflow-x: hidden;
+    scroll-padding-top: 5rem;
 }
 
 body {
@@ -46,7 +49,6 @@ body {
     margin: 0;
     overflow-x: hidden;
     width: 100%;
-    /*scroll-margin-top: 7rem;*/
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
