--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -36,6 +36,7 @@
 
 html, body {
     overflow-x: hidden;
+    scroll-padding-top: 5rem;
 }
 
 body {
@@ -48,7 +49,6 @@ body {
     margin: 0;
     overflow-x: hidden;
     width: 100%;
-    /*scroll-margin-top: 7rem;*/
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
